--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,9 +27,10 @@ module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
 font-1 = "FiraCode Nerd Font:size=12;2"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
-modules-left = i3 cpustatus gpustatus fanstatus
+; modules-left = i3 cpustatus gpustatus fanstatus
+modules-left = i3
 modules-center = cpu memory network
-modules-right = rescuetimestatus redshiftstatus sinkswitch filesystem pulseaudio date
+modules-right = rescuetimestatus redshiftstatus sinkswitch filesystem pulseaudio date sysmenu
 separator =
 spacing = 0
 dim-value = 1.0
