--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -52,3 +52,9 @@ interval = 0.5
 type = custom/script
 exec = /home/efex/scripts/fanstatus.sh --poly
 interval = 0.5
+
+[module/sysmenu]
+type = custom/script
+exec = /home/efex/scripts/sysmenu.sh
+interval = 1500
+click-left = /home/efex/scripts/sysmenu.sh --menu
